# src/generated/openapi/java/com/example/openapi/api/UserApi.java
@@ -1,5 +1,5 @@
 /*
- * Example API
+ * Persons API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
@@ -14,9 +14,8 @@ package com.example.openapi.api;
 import io.micronaut.http.annotation.*;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.core.convert.format.Format;
-import com.example.openapi.model.DefaultErrorResponse;
 import io.micronaut.http.HttpResponse;
-import com.example.openapi.model.PersonModel;
+import com.example.openapi.model.UserInfoOutputModal;
 import jakarta.annotation.Generated;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -27,28 +26,14 @@ import jakarta.validation.constraints.*;
 
 @Generated("io.micronaut.openapi.generator.JavaMicronautServerCodegen")
 @Controller
-public interface PersonApi {
+public interface UserApi {
 
     /**
-     * Get person by id
+     * {@summary Fetches active user's information}
      *
-     * @param id Identificator of the name (required)
-     *
-     * @return Returns a person's model by ID (status code 200)
-     *         or Default error response (status code default)
+     * @return User info (status code 200)
      */
-    @Get("/person/{id}")
-    HttpResponse<@Valid PersonModel> getPersonById(
-        @QueryValue("id") @NotNull Integer id
-    );
-
-    /**
-     * Get all persons
-     *
-     * @return Returns all persons (status code 200)
-     *         or Default error response (status code default)
-     */
-    @Get("/person")
-    HttpResponse<@NotNull List<@Valid PersonModel>> getPersons();
+    @Get("/user")
+    HttpResponse<@Valid UserInfoOutputModal> fetchUserInfo();
 
 }
