# src/generated/openapi/java/com/example/openapi/model/Person.java
@@ -1,5 +1,5 @@
 /*
- * Example API
+ * Persons API
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: 1.0.0
@@ -24,29 +24,29 @@ import io.micronaut.core.annotation.Nullable;
 import jakarta.annotation.Generated;
 
 /**
- * Model containing persons info
+ * Person
  */
 @JsonPropertyOrder({
-    PersonModel.JSON_PROPERTY_ID,
-    PersonModel.JSON_PROPERTY_NAME,
-    PersonModel.JSON_PROPERTY_NICKNAME,
+    Person.JSON_PROPERTY_ID,
+    Person.JSON_PROPERTY_NAME,
+    Person.JSON_PROPERTY_NICKNAME,
+    Person.JSON_PROPERTY_HOBBY,
 })
 @Serdeable
 @Generated("io.micronaut.openapi.generator.JavaMicronautServerCodegen")
-public class PersonModel {
+public class Person {
 
     public static final String JSON_PROPERTY_ID = "id";
     public static final String JSON_PROPERTY_NAME = "name";
     public static final String JSON_PROPERTY_NICKNAME = "nickname";
+    public static final String JSON_PROPERTY_HOBBY = "hobby";
 
-    @Nullable(inherited = true)
+    @NotNull
     @JsonProperty(JSON_PROPERTY_ID)
-    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
-    private Long id;
+    private Integer id;
 
-    @Nullable(inherited = true)
+    @NotNull
     @JsonProperty(JSON_PROPERTY_NAME)
-    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
     private String name;
 
     @Nullable(inherited = true)
@@ -54,10 +54,20 @@ public class PersonModel {
     @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
     private String nickname;
 
+    @Nullable(inherited = true)
+    @JsonProperty(JSON_PROPERTY_HOBBY)
+    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
+    private String hobby;
+
+    public Person(Integer id, String name) {
+        this.id = id;
+        this.name = name;
+    }
+
     /**
      * @return the id property value
      */
-    public Long getId() {
+    public Integer getId() {
         return id;
     }
 
@@ -66,16 +76,16 @@ public class PersonModel {
      *
      * @param id property value to set
      */
-    public void setId(Long id) {
+    public void setId(Integer id) {
         this.id = id;
     }
 
     /**
      * Set id in a chainable fashion.
      *
-     * @return The same instance of PersonModel for chaining.
+     * @return The same instance of Person for chaining.
      */
-    public PersonModel id(Long id) {
+    public Person id(Integer id) {
         this.id = id;
         return this;
     }
@@ -99,9 +109,9 @@ public class PersonModel {
     /**
      * Set name in a chainable fashion.
      *
-     * @return The same instance of PersonModel for chaining.
+     * @return The same instance of Person for chaining.
      */
-    public PersonModel name(String name) {
+    public Person name(String name) {
         this.name = name;
         return this;
     }
@@ -125,10 +135,36 @@ public class PersonModel {
     /**
      * Set nickname in a chainable fashion.
      *
-     * @return The same instance of PersonModel for chaining.
+     * @return The same instance of Person for chaining.
      */
-    public PersonModel nickname(String nickname) {
+    public Person nickname(String nickname) {
         this.nickname = nickname;
+        return this;
+    }
+
+    /**
+     * @return the hobby property value
+     */
+    public String getHobby() {
+        return hobby;
+    }
+
+    /**
+     * Set the hobby property value
+     *
+     * @param hobby property value to set
+     */
+    public void setHobby(String hobby) {
+        this.hobby = hobby;
+    }
+
+    /**
+     * Set hobby in a chainable fashion.
+     *
+     * @return The same instance of Person for chaining.
+     */
+    public Person hobby(String hobby) {
+        this.hobby = hobby;
         return this;
     }
 
@@ -140,23 +176,25 @@ public class PersonModel {
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        var personModel = (PersonModel) o;
-        return Objects.equals(this.id, personModel.id)
-            && Objects.equals(this.name, personModel.name)
-            && Objects.equals(this.nickname, personModel.nickname);
+        var person = (Person) o;
+        return Objects.equals(this.id, person.id)
+            && Objects.equals(this.name, person.name)
+            && Objects.equals(this.nickname, person.nickname)
+            && Objects.equals(this.hobby, person.hobby);
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(id, name, nickname);
+        return Objects.hash(id, name, nickname, hobby);
     }
 
     @Override
     public String toString() {
-        return "PersonModel("
+        return "Person("
             + "id: " + getId() + ", "
             + "name: " + getName() + ", "
-            + "nickname: " + getNickname()
+            + "nickname: " + getNickname() + ", "
+            + "hobby: " + getHobby()
             + ")";
     }
 
