# src/generated/openapi/java/com/example/openapi/model/PersonSearchRequest.java
@@ -1,0 +1,198 @@
+/*
+ * Persons API
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package com.example.openapi.model;
+
+import java.util.Objects;
+import java.util.Arrays;
+import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import com.fasterxml.jackson.annotation.*;
+import io.micronaut.serde.annotation.Serdeable;
+import jakarta.validation.constraints.*;
+import jakarta.validation.Valid;
+import io.micronaut.core.annotation.Nullable;
+import jakarta.annotation.Generated;
+
+/**
+ * PersonSearchRequest
+ */
+@JsonPropertyOrder({
+    PersonSearchRequest.JSON_PROPERTY_NAME,
+    PersonSearchRequest.JSON_PROPERTY_NICKNAME,
+    PersonSearchRequest.JSON_PROPERTY_HOBBY,
+    PersonSearchRequest.JSON_PROPERTY_TEXT_SEARCH,
+})
+@Serdeable
+@Generated("io.micronaut.openapi.generator.JavaMicronautServerCodegen")
+public class PersonSearchRequest {
+
+    public static final String JSON_PROPERTY_NAME = "name";
+    public static final String JSON_PROPERTY_NICKNAME = "nickname";
+    public static final String JSON_PROPERTY_HOBBY = "hobby";
+    public static final String JSON_PROPERTY_TEXT_SEARCH = "textSearch";
+
+    @Nullable(inherited = true)
+    @JsonProperty(JSON_PROPERTY_NAME)
+    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
+    private String name;
+
+    @Nullable(inherited = true)
+    @JsonProperty(JSON_PROPERTY_NICKNAME)
+    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
+    private String nickname;
+
+    @Nullable(inherited = true)
+    @JsonProperty(JSON_PROPERTY_HOBBY)
+    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
+    private String hobby;
+
+    @Nullable(inherited = true)
+    @JsonProperty(JSON_PROPERTY_TEXT_SEARCH)
+    @JsonInclude(JsonInclude.Include.USE_DEFAULTS)
+    private String textSearch;
+
+    /**
+     * @return the name property value
+     */
+    public String getName() {
+        return name;
+    }
+
+    /**
+     * Set the name property value
+     *
+     * @param name property value to set
+     */
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    /**
+     * Set name in a chainable fashion.
+     *
+     * @return The same instance of PersonSearchRequest for chaining.
+     */
+    public PersonSearchRequest name(String name) {
+        this.name = name;
+        return this;
+    }
+
+    /**
+     * @return the nickname property value
+     */
+    public String getNickname() {
+        return nickname;
+    }
+
+    /**
+     * Set the nickname property value
+     *
+     * @param nickname property value to set
+     */
+    public void setNickname(String nickname) {
+        this.nickname = nickname;
+    }
+
+    /**
+     * Set nickname in a chainable fashion.
+     *
+     * @return The same instance of PersonSearchRequest for chaining.
+     */
+    public PersonSearchRequest nickname(String nickname) {
+        this.nickname = nickname;
+        return this;
+    }
+
+    /**
+     * @return the hobby property value
+     */
+    public String getHobby() {
+        return hobby;
+    }
+
+    /**
+     * Set the hobby property value
+     *
+     * @param hobby property value to set
+     */
+    public void setHobby(String hobby) {
+        this.hobby = hobby;
+    }
+
+    /**
+     * Set hobby in a chainable fashion.
+     *
+     * @return The same instance of PersonSearchRequest for chaining.
+     */
+    public PersonSearchRequest hobby(String hobby) {
+        this.hobby = hobby;
+        return this;
+    }
+
+    /**
+     * @return the textSearch property value
+     */
+    public String getTextSearch() {
+        return textSearch;
+    }
+
+    /**
+     * Set the textSearch property value
+     *
+     * @param textSearch property value to set
+     */
+    public void setTextSearch(String textSearch) {
+        this.textSearch = textSearch;
+    }
+
+    /**
+     * Set textSearch in a chainable fashion.
+     *
+     * @return The same instance of PersonSearchRequest for chaining.
+     */
+    public PersonSearchRequest textSearch(String textSearch) {
+        this.textSearch = textSearch;
+        return this;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        var personSearchRequest = (PersonSearchRequest) o;
+        return Objects.equals(this.name, personSearchRequest.name)
+            && Objects.equals(this.nickname, personSearchRequest.nickname)
+            && Objects.equals(this.hobby, personSearchRequest.hobby)
+            && Objects.equals(this.textSearch, personSearchRequest.textSearch);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(name, nickname, hobby, textSearch);
+    }
+
+    @Override
+    public String toString() {
+        return "PersonSearchRequest("
+            + "name: " + getName() + ", "
+            + "nickname: " + getNickname() + ", "
+            + "hobby: " + getHobby() + ", "
+            + "textSearch: " + getTextSearch()
+            + ")";
+    }
+
+}
