# src/main/java/com/example/controller/PersonController.java
@@ -2,9 +2,10 @@ package com.example.controller;
 
 import com.example.business.mapper.PersonMapper;
 import com.example.business.useCase.GetPersons;
-import com.example.jooq.person.tables.pojos.Person;
-import com.example.openapi.api.PersonApi;
-import com.example.openapi.model.PersonModel;
+import com.example.openapi.api.PersonsApi;
+import com.example.openapi.model.Person;
+import com.example.openapi.model.PersonSearchRequest;
+import com.example.openapi.model.PersonsResponse;
 import io.micronaut.http.HttpResponse;
 import io.micronaut.http.annotation.Controller;
 import jakarta.validation.Valid;
@@ -13,7 +14,7 @@ import jakarta.validation.constraints.NotNull;
 import java.util.List;
 
 @Controller
-public class PersonController implements PersonApi {
+public class PersonController implements PersonsApi {
 
     private final GetPersons getPersons;
 
@@ -24,13 +25,23 @@ public class PersonController implements PersonApi {
     }
 
     @Override
-    public HttpResponse<@Valid PersonModel> getPersonById(Integer id) {
+    public HttpResponse<com.example.openapi.model.@Valid Person> getPerson(Integer id) {
         return null;
     }
 
     @Override
-    public HttpResponse<@NotNull List<@Valid PersonModel>> getPersons() {
-        List<Person> persons = getPersons.execute();
-        return HttpResponse.ok(PersonMapper.mapToPersonModels(persons));
+    public HttpResponse<@NotNull List<@Valid Person>> getPersons() {
+        List<Person> allPersons = PersonMapper.mapToPersons(getPersons.execute());
+        return HttpResponse.ok(allPersons);
+    }
+
+    @Override
+    public HttpResponse<@Valid PersonsResponse> searchPersons(Integer page, Integer size, List<@NotNull String> sort, PersonSearchRequest personSearchRequest) {
+        return null;
+    }
+
+    @Override
+    public HttpResponse<Void> updatePerson(Integer id, com.example.openapi.model.Person person) {
+        return null;
     }
 }
